<resources>
    <string name="app_name">Mis Lugares Favoritos</string>
    <string name="edicion">Nuevo/Edición</string>
    <string name="informacion">Información</string>
    <string name="title_activity_mapa">Lugares</string>
    <string name="editar">Editar</string>
    <string name="borrar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="Nombre">Nombre:</string>
    <string name="categoria">Categoría:</string>
    <string name="todos">TODOS</string>
    <string name="bares">Bares</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="discotecas">Discotecas</string>
    <string name="boleras">Boleras</string>
    <string name="cines">Cines</string>
    <string-array name="spinner">
        <item>TODOS</item>
        <item>Bares</item>
        <item>Restaurantes</item>
        <item>Discotecas</item>
        <item>Boleras</item>
        <item>Cines</item>
    </string-array>
    <string name="longitud">Longitud:</string>
    <string name="latitud">Latitud:</string>
    <string name="valoracion">Valoración:</string>
    <string name="comentarios">Comentarios:</string>
    <string name="toastEditado">Editado de forma correcta</string>
    <string name="toastCreado">Creado de forma correcta</string>
    <string name="conexionoff">Conexión OFF</string>
    <string name="conexionon">Conexión ON</string>
    <string name="permisos">Se requiere permisos para ejecutar la aplicación</string>
    <string name="gpsNo">El GPS no está activado</string>
    <string name="activarGPS">¿Quieres activar el GPS?</string>
    <string name="no" translatable="false">No</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="si">Sí</string>
    <string name="eliminar">Eliminar</string>
    <string name="confirmareliminar">¿Desea eliminar esta información?</string>
    <string name="eliminarInformacion">Eliminar Información</string>
    <string name="toastEliminado">Eliminado de forma correcta</string>

</resources>
